--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../dist/demo/console.css">
+  <link rel="stylesheet" href="../dist/package/console.css">
   <title>ConsoleInDom</title>
 </head>
 <body>
-  <script src="../dist/global/index.min.js"></script>
+  <script src="../dist/package/console.min.js"></script>
   <script>
     var Console = ConsoleInDom.render()
     Console.log(2)
